@startuml
class UserProfile {
  -id : Long
  -username : String
  -email : String
  +getId() : Long
  +setId(id : Long) : void
  +getUsername() : String
  +setUsername(username : String) : void
  +getEmail() : String
  +setEmail(email : String) : void
}
class Post {
  -id : Long
  -title : String
  -content : String
  +getId() : Long
  +setId(id : Long) : void
  +getTitle() : String
  +setTitle(title : String) : void
  +getContent() : String
  +setContent(content : String) : void
}
class Image {
  -id : Long
  -url : String
  +getId() : Long
  +setId(id : Long) : void
  +getUrl() : String
  +setUrl(url : String) : void
}

UserProfile "1" *-- "0..*" Post : contains
Post "1" o-- "0..*" Image : includes
@enduml